tests/baselines/reference/functionCall10.errors.txt
==== tests/cases/compiler/functionCall10.ts (4 errors) ====
    function foo(...a:number[]){};
    foo(0, 1); 
    foo('foo'); 
    ~~~
!!! functionCall10.ts(3,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'number' to argument 1 which is of type 'string'.
    ~~~
!!! functionCall10.ts(3,1): error TS2087: Could not select overload for 'call' expression.
    foo();
    foo(1, 'bar');
    ~~~
!!! functionCall10.ts(5,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'number' to argument 2 which is of type 'string'.
    ~~~
!!! functionCall10.ts(5,1): error TS2087: Could not select overload for 'call' expression.
    